# cargo-stylus

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  OPTIMIZING_BINARIES.md  README.md  build.rs  docker-bake.hcl  install.sh
.ci/: build_and_test.sh
.github/: pull_request_template.md
.github/workflows/: check.yml  linux.yml  mac.yml  windows.yml
cache/: Cargo.toml
cache/src/: main.rs
cgen/: Cargo.toml
cgen/src/: main.rs
check/: Cargo.toml  OPTIMIZING_BINARIES.md  build.rs
check/licenses/: Apache-2.0  MIT
check/src/: activate.rs  cache.rs  check.rs  constants.rs  deploy.rs  docker.rs  export_abi.rs  macros.rs  main.rs  new.rs  project.rs  tx.rs  verify.rs  wallet.rs
ci/: build_and_test.bat  build_and_test.sh
example/: Cargo.toml
example/src/: main.rs
licenses/: COPYRIGHT.md
main/: Cargo.toml  Dockerfile  VALID_WASM.md
main/src/: activate.rs  cache.rs  check.rs  constants.rs  deploy.rs  docker.rs  export_abi.rs  gen.rs  get_initcode.rs  hostio.rs  macros.rs  main.rs  new.rs  project.rs  replay.rs  trace.rs  verify.rs  wallet.rs
main/src/c/: gen.rs
main/src/deploy/: deployer.rs  factory.rs  mod.rs
main/src/util/: color.rs  mod.rs  sys.rs
replay/: Cargo.toml
replay/src/: hostio.rs  main.rs  trace.rs
src/: cgen.rs  cheader.rs  check.rs  color.rs  common.rs  constants.rs  deploy.rs  docker.rs  export_abi.rs  lib.rs  main.rs  new.rs  project.rs  script.rs  tx.rs  util.rs  verify.rs  wallet.rs
src/c/: gen.rs  header.rs  mod.rs
src/replay/: hostio.rs  mod.rs  query.js  trace.rs
src/script/templates/: mod.rs
src/script/templates/rust/: mod.rs
src/util/: mod.rs  scripts.rs
util/: Cargo.toml
util/src/: color.rs  lib.rs  sys.rs  text.rs
verify/: Cargo.toml
verify/src/: main.rs  verify.rs
