[workspace]
members = ["example", "main"]
resolver = "2"

[workspace.package]
authors = ["Offchain Labs"]
version = "0.6.1"
edition = "2021"
homepage = "https://arbitrum.io"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OffchainLabs/cargo-stylus"
readme = "README.md"

[workspace.dependencies]
alloy = { version = "1.0", features = ["essentials", "signer-keystore", "getrandom", "provider-trace-api", "provider-debug-api"] }
brotli2 = "0.3"
bytesize = "2.0"
clap = { version = "4.5", features = [ "derive", "color" ] }
eyre = "0.6"
glob = "0.3"
hex = "0.4"
rustc-host = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-info = "0.9"
tempfile = "3.20"
thiserror = "2.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread" ] }
toml = "0.8"
wasm-encoder = "0.232"
wasm-gen = "0.1"
wasmer = "6.0"
wasmparser = "0.232"
wasmprinter = "0.232"

# replay tool
function_name = "0.3"
lazy_static = "1.5"
libc = "0.2"
libloading = "0.8"
parking_lot = "0.12"
sneks = "0.1"
