[package]
name = "cargo-stylus-cache"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "CLI tool for interacting with the Stylus cache manager for Arbitrum chains"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
cargo-stylus-util.workspace = true
hex.workspace = true
clap.workspace = true
ethers.workspace = true
eyre.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
tokio.workspace = true
serde_json = "1.0.103"