[package]
name = "cargo-stylus"
keywords = ["arbitrum", "ethereum", "stylus", "alloy", "cargo"]
description = "CLI tool for building Stylus contracts on Arbitrum chains"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

[features]
docker-test = []
nightly = []

[dependencies]
alloy.workspace = true
brotli2.workspace = true
bytesize.workspace = true
clap.workspace = true
eyre.workspace = true
function_name.workspace = true
glob.workspace = true
hex.workspace = true
lazy_static.workspace = true
libloading.workspace = true
parking_lot.workspace = true
rustc-host.workspace = true
serde_json.workspace = true
serde.workspace = true
sneks.workspace = true
sys-info.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tiny-keccak.workspace = true
tokio.workspace = true
toml.workspace = true
wasm-encoder.workspace = true
wasm-gen.workspace = true
wasmer.workspace = true
wasmparser.workspace = true
wasmprinter.workspace = true
